add api key auth middleware
